2006-01-02 Kimmo
 PATCH: [ 1395474 ] Define WINVER for compiling with VS.net
  Src: StdAfx.h

2006-01-02 Perry
 PATCH: [ 1395487 ] Unused local variable in UniStdioFile::DoOpen()
  (Delete unused variable)
  Src/Common: UniFile.cpp
 BUG: [ 1395497 ] Unused local variables in CMergeDoc::GetWordDiffArray()
  (Delete unused variables)
  Src: MergeDocLineDiffs.cpp
 BUG: [ 1395494 ] stringdiffs.cpp / LastChar() returning uninitialized value?
  Src: stringdiffs.cpp

2006-01-02 Kimmo
 Remove unused variable from VSSHelper.cpp/VSSHelper::ReLinkVCProj()
  Src: VSSHelper.cpp

2006-01-02 Perry
 PATCH: [ 1392647 ] Prefix members with m_ in storage_for_plugins
  Src/Common: multiformatText.cpp multiformatText.h
 PATCH: [ 1394717 ] Fix resource.h include for translations
  Src/Languages: */Merge*.rc
  Src/Languages deleted: UpdateAll_resource_h.bat
  Src/Languages deleted: */resource.h (localized versions of resource.h)
 BUG: [ 1395107 ] MergeKorean.rc not compile in cvs trunk
  (resource.h => ..\..\resource.h fix missed Korean somehow)
  Src/Languages/Korean: MergeKorean.rc
 PATCH: [ 1394073 ] Fix ByteComparator: m_bol0
  (Change in ByteComparator.h is cosmetic typo fix in comment)
  (Fixes some bad tabbing as well)
  Src: ByteComparator.cpp ByteComparator.h

2006-01-01 Kimmo
 PATCH: [ 1394759 ] Allows quotes in Rational ClearCase checkout comment
  Submitted by Gal Hammer
  Src: MainFrm.cpp
 Add Gal Hammer to contributors list
  Docs/Users: Contributors.txt

2006-01-01 Perry
 BUG: [ 1394857 ] cvs trunk does not compile, ANSI, FindEncodingIdFromNameOrAl
  Src: codepage_detect.cpp

2006-01-01 Kimmo
 PATCH: [ 1392347 ] Fix status after synching unique binary files
  Src: DirScan.cpp
 PATCH: [ 1394464 ] Find again code doesn't recognize dos/mac EOLs
  Src/editlib: ccrystaltextview.cpp
 BUG: [ 1394851 ] cvs trunk does not compile (DirScan.cpp, sRule)
  Src: DirScan.cpp

2005-12-31 Perry
 PATCH: [ 1394247 ] Fix GuessEncoding recognition of codepages