@@ -1,6 +1,8 @@
 2006-01-02 Kimmo
  PATCH: [ 1395474 ] Define WINVER for compiling with VS.net
   Src: StdAfx.h
+ PATCH: [ 1395018 ] Small cleanup for CMergeDoc::PrimeTextBuffers()
+  Src: DiffList.cpp DiffList.h MergeDoc.cpp
 
 2006-01-02 Perry
  PATCH: [ 1395487 ] Unused local variable in UniStdioFile::DoOpen()
